Challenge 1 & 2 of admission challenge completed
Ask about challenge 2 in order to see if there are any errors missed

--- a/Starter Code Challenge HTML & CSS 4/starter-code/styles.css
+++ b/Starter Code Challenge HTML & CSS 4/starter-code/styles.css
@@ -167,6 +167,7 @@ ul, ol, li {
 }
 .pricing__card-bottom {
   font-size: 19px;
+  border-top: 2px;
 }
 .pricing__card-bottom p, .pricing__card-bottom ol, .pricing__card-bottom ul li {
   font-size: 19px;
